--- a/app/views/patients/_peritonitis_table.html.haml
+++ b/app/views/patients/_peritonitis_table.html.haml
@@ -1,52 +1,41 @@
 %table.responsive
   %thead
-    %th.table-width
-      Diagnosis Date
-    %th.table-width
-      Start Treatment Date
-    %th.table-width
-      End Treatment Date
-    %th.table-width
-      Causes/ Symptoms
-    %th.table-width
-      Organisms
-    %th.table-width
-      Episode Type
-    %th.table-width
-      White Cell Count
-    %th.table-width
-      Antibiotics/Routes
-    %th.table-width
-      Notes
-    %th.table-width
-      Last Updated
-    %th.table-width.g-center{colspan: "2"}
-      Action
+    %tr
+      %th.column-6-width
+        Diagnosis Date
+      %th.column-6-width
+        Treatment Start Date
+      %th.column-6-width
+        Treatment End Date
+      %th
+        Episode Type
+      %th
+        Organisms
+      %th.column-9-width
+        White Cell Count
+      %th
+        Causes/ Symptoms
+      %th
+        Antibiotics/Routes
+      %th
+        Notes
+      %th.column-6-width
+        Last Updated
+      %th
+        Action
 
   %tbody
     - @peritonitis_episodes.each do |p|
       %tr{ valign: "top" }
+
         %td{ :data => { :heading => "Diagnosis Date" }, valign: "top" }
           = p.diagnosis_date.strftime("%d/%m/%Y")
-        %td{ :data => { :heading => "Start Date"}, valign: "top" }
-          = p.start_treatment_date.strftime("%d/%m/%Y")
-        %td{ :data => { :heading => "End Date"}, valign: "top" }
-          = p.end_treatment_date.strftime("%d/%m/%Y")
-        %td{ :data => { :heading => "Organisms"}, valign: "top" }
-          %ul.table-data-list
-            %li
-              = "Line Break: #{p.line_break.yesno}"
-            %li
-              = "Exit Site Infection: #{p.exit_site_infection.yesno}"
-            %li
-              = "Diarrhoea: #{p.diarrhoea.yesno}"
-            %li
-              = "Abdominal Pain: #{p.abdominal_pain.yesno}"
-            %li
-              = "Fluid Description: #{p.fluid_description.description}"
 
-        %td{ :data => { :heading => "Organisms"}, valign: "top" }
-          = organism_and_sensitivity(p.infection_organisms)
+        %td{ :data => { :heading => "Start Treatment Date"}, valign: "top" }
+          = p.treatment_start_date.strftime("%d/%m/%Y")
+
+        %td{ :data => { :heading => "End Treatment Date"}, valign: "top" }
+          = p.treatment_end_date.strftime("%d/%m/%Y")
 
         %td{ :data => { :heading => "Episode Type"}, valign: "top" }
           %ul.table-data-list
@@ -54,6 +43,9 @@
               = p.episode_type.blank? ? "Unknown": p.episode_type.term
             %li
               = "Catheter Removed: #{p.catheter_removed.yesno}"
+
+        %td{ :data => { :heading => "Organisms"}, valign: "top" }
+          = organism_and_sensitivity(p.infection_organisms)
 
         %td{ :data => { :heading => "White Cell Count"}, valign: "top" }
           %ul.table-data-list
@@ -68,11 +60,24 @@
             %li
               = "Other: #{p.white_cell_other}%"
 
+        %td{ :data => { :heading => "Causes/ Symptoms"}, valign: "top" }
+          %ul.table-data-list
+            %li
+              = "Line Break: #{p.line_break.yesno}"
+            %li
+              = "Exit Site Infection: #{p.exit_site_infection.yesno}"
+            %li
+              = "Diarrhoea: #{p.diarrhoea.yesno}"
+            %li
+              = "Abdominal Pain: #{p.abdominal_pain.yesno}"
+            %li
+              = "Fluid Description: #{p.fluid_description.description}"
+
         %td{ :data => { :heading => "Antibiotics/ Routes"}, valign: "top" }
           %ul.table-data-list
             = medication_and_route(p.medications)
 
-        %td{:data => { :heading => "Description" }, valign: "top"}
+        %td{:data => { :heading => "Notes" }, valign: "top"}
           %dl.accordion{ data: { accordion: true } }
             %dd.accordion-navigation
               %a.toggle-info{ :id => "patient-peritonitis-toggle-#{p.id}", href: "#patient-peritonitis-toggle-#{p.id}" }
@@ -84,4 +89,6 @@
           = p.updated_at.strftime("%d/%m/%Y, %H:%M")
 
         %td{ :data => { :heading => "Action" }, valign: "top" }
-          = link_to "Update", edit_patient_peritonitis_episode_path(@patient, p.id)
+          %ul.table-data-list
+            %li
+              = link_to "Update", edit_patient_peritonitis_episode_path(@patient, p.id)
