Setup 'show' for viewing a single episode of peritonitis(wip).

--- a/app/views/patients/_peritonitis_table.html.haml
+++ b/app/views/patients/_peritonitis_table.html.haml
@@ -92,3 +92,5 @@
           %ul.table-data-list
             %li
               = link_to "Update", edit_patient_peritonitis_episode_path(@patient, p.id)
+            %li
+              = link_to "View Episode", patient_peritonitis_episode_path(@patient, p.id)
