Renamed class to be more specific for section underliner styling.

--- a/app/assets/stylesheets/foundation/globals.css.scss
+++ b/app/assets/stylesheets/foundation/globals.css.scss
@@ -42,7 +42,7 @@ table {
   font-size: 1em;
 }
 
-.section-divider {
+.section-underliner {
   border-bottom: #008cba solid 0.1em;
   margin: 0.5em;
 }
