--- a/app/views/patients/_demographic_form.html.haml
+++ b/app/views/patients/_demographic_form.html.haml
@@ -44,7 +44,7 @@
 
       - if @patient.persisted?
         .row
-          .section-divider
+          .section-underliner
         .row
           .large-12.columns
             To enter date of death please set 'Death' modality:
