--- a/app/assets/stylesheets/foundation/globals.css.scss
+++ b/app/assets/stylesheets/foundation/globals.css.scss
@@ -47,6 +47,12 @@ table {
   margin: 0.5em;
 }
 
+.section-divider {
+  border-bottom: #008cba solid 0.1em;
+  padding: 0 0 0.5em 0;
+  margin: 0 0 0.5em 0;
+}
+
 .g-center {
   text-align: center;
 }
