Renamed styling divider to be horizontalonly.

--- a/app/assets/stylesheets/foundation/globals.css.scss
+++ b/app/assets/stylesheets/foundation/globals.css.scss
@@ -47,7 +47,7 @@ table {
   margin: 0.5em;
 }
 
-.section-divider {
+.horizontal-divider {
   border-bottom: #008cba solid 0.1em;
   padding: 0 0 0.5em 0;
   margin: 0 0 0.5em 0;
