--- a/app/views/patients/_medication_fields.html.haml
+++ b/app/views/patients/_medication_fields.html.haml
@@ -7,7 +7,15 @@
 
     .select-peritonitis-drug
       = pm.label :medicatable_id, "Select Drug (peritonitis drugs only)"
-      = pm.collection_select :medicatable_id, Drug.peritonitis, :id, :name, {prompt: "Please select drug used to treat this episode of peritonitis" }, :class => "peritonitis-drug-select"
+      = pm.collection_select :medicatable_id, Drug.peritonitis, :id, :name, { prompt: "Please select drug used to treat this episode of peritonitis" }, :class => "peritonitis-drug-select"
+
+      = pm.hidden_field :medicatable_type, value: "Drug", :class => "selected-medicatable-type"
+
+  - elsif pm.object.treatable_type == "ExitSiteInfection"
+
+    .select-exit-site-drug
+      = pm.label :medicatable_id, "Select Drug (exit site drugs only)"
+      = pm.collection_select :medicatable_id, Drug.peritonitis, :id, :name, { prompt: "Please select drug used to treat this exit site infection" }, :class => "exit-site-drug-select"
 
       = pm.hidden_field :medicatable_type, value: "Drug", :class => "selected-medicatable-type"
 
