--- a/app/assets/stylesheets/foundation/toggle.css.scss
+++ b/app/assets/stylesheets/foundation/toggle.css.scss
@@ -53,10 +53,15 @@
   border-radius: 0.5em;
   padding: 0 0.3em 0 0.3em;
   font-size: 0.8em;
+  color: #008cba;
 }
 
 .toggle-text {
   font-size: 0.8em;
+}
+
+.toggle-content {
+  font-size: 0.7em;
 }
 
 .accordion .accordion-navigation > .content.active, .accordion dd  > .content.toggle-content {
