--- a/app/assets/stylesheets/foundation/toggle.css.scss
+++ b/app/assets/stylesheets/foundation/toggle.css.scss
@@ -1,3 +1,15 @@
+.accordion .accordion-navigation > a, .accordion dd > a {
+  background: #FFFFFF;
+  font-size: 0.9em;
+  padding: 0 0.5em 0 0.5em;
+  border-radius: 0.5em;
+}
+
+.accordion .accordion-navigation > a, .accordion dd > a.toggle-form {
+  margin-bottom: 0.5em;
+
+}
+
 #new-form:target {
   .hide {
     display: block;
