--- a/app/assets/stylesheets/foundation/globals.css.scss
+++ b/app/assets/stylesheets/foundation/globals.css.scss
@@ -38,6 +38,11 @@ th, td {
   overflow: hidden;
 }
 
+p {
+  padding: 0 0.5em 0 0.5em;
+  margin: 0 0 0.5em 0;
+}
+
 .page-title {
   color: #008cba;
 }
