--- a/app/assets/stylesheets/foundation/tables.css.scss
+++ b/app/assets/stylesheets/foundation/tables.css.scss
@@ -10,6 +10,19 @@ table {
 
   table.responsive {
     display: block;
+    font-size: 1.2em;
+
+    .toggle-content {
+      font-size: 0.9em;
+    }
+
+    .accordion dd > a.toggle-info {
+      background: none;
+      border-radius: 0.5em;
+      padding: 0 0.3em 0 0.3em;
+      font-size: 0.9em;
+      color: #008cba;
+    }
 
     thead, tbody, th, td, tr, caption {
       display: block;
