--- a/app/views/peritonitis_episodes/show.html.haml
+++ b/app/views/peritonitis_episodes/show.html.haml
@@ -33,24 +33,24 @@
               Outcome:
 
             .large-12.columns
-              .sub-bold
-                Episode Type:
               %ul
                 %li
-                  = @peritonitis_episode.episode_type.blank? ? "Unknown": @peritonitis_episode.episode_type.term
+                  Episode Type:
+                  = @peritonitis_episode.episode_type.blank? ? "Unknown" : @peritonitis_episode.episode_type.term
                 %li
                   = "Catheter Removed: #{yes_no(@peritonitis_episode.catheter_removed)}"
 
-            .large-12.columns
-              .sub-bold
-                Organisms/Sensitivity:
+          .large-12.columns
+            .section-underliner.title-bold
+              Organisms/Sensitivity:
             .large-12.columns
               %ul.table-data-list
                 = organisms_and_sensitivities(@peritonitis_episode.infection_organisms)
 
+          .large-12.columns
+            .section-underliner.title-bold
+              White Cell Count:
             .large-12.columns
-              .sub-bold
-                White Cell Count:
               %ul
                 %li
                   = "Total: #{@peritonitis_episode.white_cell_total}"
