--- a/app/views/exit_site_infections/show.html.haml
+++ b/app/views/exit_site_infections/show.html.haml
@@ -23,7 +23,7 @@
               Outcome:
 
             %p
-              = @exit_site_infection.outcome.blank? ? "Unknown": @exit_site_infection.outcome
+              = blank_unknown_data(@exit_site_infection.outcome)
 
           .large-12.columns
             .section-underliner.title-bold
@@ -38,7 +38,7 @@
             .section-underliner.title-bold
               Treatment:
             %p
-              = @exit_site_infection.treatment.blank? ? "Unknown": @exit_site_infection.treatment
+              = blank_unknown_data(@exit_site_infection.treatment)
 
           .large-12.columns
             .section-underliner.title-bold
