--- a/app/views/exit_site_infections/_form.html.haml
+++ b/app/views/exit_site_infections/_form.html.haml
@@ -24,45 +24,7 @@
     .section-underliner
       Organisms and their sensitivities for this exit site infection:
 
-    = e.fields_for :infection_organisms, @exit_site_infection.infection_organisms do |io|
-
-      - if io.object.new_record?
-
-        #new-organism-form
-          %a.button.tiny.toggle.right.mt{ href: '#new-organism-form' }
-            Record a new organism and sensitivity
-
-          .hide
-            %a.button.tiny.close-new-form{ href: '#' }
-              Close
-
-            %fieldset
-              %legend
-                Record a new organism and sensitivity
-
-              .row
-
-                = render :partial => 'infection_organisms/organism_fields', :locals => { :io => io }
-
-      - else
-        .large-12.columns
-          %dl.accordion{ data: { accordion: true } }
-            %dd.accordion-navigation.organism-form
-
-              %a.fi-plus.fi-minus.form-toggle{ href: "#edit-organism-#{io.object.id}", class: "organism-accordian" }
-
-                = "#{io.object.organism_code.name} - #{io.object.sensitivity}"
-
-                .right.edit
-                  Edit
-
-              .columns.large-6.organism-form.content{ :id => "edit-organism-#{io.object.id}", data: { index: 0 }}
-
-                = render :partial => 'infection_organisms/organism_fields', :locals => { :io => io }
-
-                .organism-form.content{ :id => "edit-organism-#{io.object.id}" }
-                  = io.check_box :_destroy
-                  = io.label :_destroy, "Terminate?", class: "delete"
+    = render :partial => 'exit_site_infections/organism_forms', :locals => { :e => e }
 
 .row
   .large-12.columns
@@ -77,45 +39,7 @@
     .section-underliner
       Medications administered for this exit site infection:
 
-    = e.fields_for :medications, @exit_site_infection.medications do |pm|
-
-      - if pm.object.new_record?
-
-        #new-form
-          %a.button.tiny.toggle.right.mt{ href: '#new-form' }
-            Add a new medication
-
-          .hide
-            %a.button.tiny.close-new-form{ href: '#' }
-              Close
-
-            %fieldset
-              %legend
-                Add a new medication
-
-              .row
-
-                = render :partial => 'patients/medication_fields', :locals => { :pm => pm }
-
-      - else
-        .large-12.columns
-          %dl.accordion{ data: { accordion: true } }
-            %dd.accordion-navigation.med-form
-
-              %a.fi-plus.fi-minus.form-toggle{ href: "#edit-meds-#{pm.object.id}", :class => "drug-#{drug_types_colour_tag(pm.object.medicatable.drug_types)}" }
-
-                = "#{pm.object.medicatable.name} - #{pm.object.dose}, #{pm.object.medication_route.name}, #{pm.object.frequency}, #{pm.object.date}"
-
-                .right.edit
-                  Edit
-
-              .columns.large-6.meds-form.content{ :id => "edit-meds-#{pm.object.id}", data: { index: 0 } }
-
-                = render :partial => 'patients/medication_fields', :locals => { :pm => pm }
-
-                .med-form.content{ :id => "edit-meds-#{pm.object.id}" }
-                  = pm.check_box :_destroy
-                  = pm.label :_destroy, "Terminate?", class: "delete"
+    = render :partial => 'exit_site_infections/medication_forms', :locals => { :e => e }
 
 .row
   .large-12.columns
