--- a/app/views/peritonitis_episodes/_form.html.haml
+++ b/app/views/peritonitis_episodes/_form.html.haml
@@ -38,45 +38,7 @@
         .section-underliner
           Organisms and their sensitivities for this peritonitis episode:
 
-        = p.fields_for :infection_organisms, @peritonitis_episode.infection_organisms do |io|
-
-          - if io.object.new_record?
-
-            #new-organism-form
-              %a.button.tiny.toggle.right.mt{ href: '#new-organism-form' }
-                Record a new organism and sensitivity
-
-              .hide
-                %a.button.tiny.close-new-form{ href: '#' }
-                  Close
-
-                %fieldset
-                  %legend
-                    Record a new organism and sensitivity
-
-                  .row
-
-                    = render :partial => 'infection_organisms/organism_fields', :locals => { :io => io }
-
-          - else
-            .large-12.columns
-              %dl.accordion{data: {accordion: true} }
-                %dd.accordion-navigation.organism-form
-
-                  %a.fi-plus.fi-minus.form-toggle{ href: "#edit-organism-#{io.object.id}", class: "organism-accordian" }
-
-                    = "#{io.object.organism_code.name} - #{io.object.sensitivity}"
-
-                    .right.edit
-                      Edit
-
-                  .columns.large-6.organism-form.content{:id => "edit-organism-#{io.object.id}", data: { index: 0 }}
-
-                    = render :partial => 'infection_organisms/organism_fields', :locals => { :io => io }
-
-                    .organism-form.content{:id => "edit-organism-#{io.object.id}"}
-                      = io.check_box :_destroy
-                      = io.label :_destroy, "Terminate?", class: "delete"
+        = render :partial => 'peritonitis_episodes/organism_forms', :locals => { :p => p }
 
     .row
       .large-12.columns
@@ -135,43 +97,4 @@
         .section-underliner
           Medications administered for this peritonitis episode:
 
-        = p.fields_for :medications, @peritonitis_episode.medications do |pm|
-
-          - if pm.object.new_record?
-
-            #new-form
-              %a.button.tiny.toggle.right.mt{href: '#new-form'}
-                Add a new medication
-
-              .hide
-                %a.button.tiny.close-new-form{href: '#'}
-                  Close
-
-                %fieldset
-                  %legend
-                    Add a new medication
-
-                  .row
-
-                    = render :partial => 'patients/medication_fields', :locals => { :pm => pm }
-
-          - else
-
-            %dl.accordion{data: {accordion: true} }
-              %dd.accordion-navigation.med-form
-
-                %a.fi-plus.fi-minus.form-toggle{href: "#edit-meds-#{pm.object.id}", :class => "drug-#{drug_types_colour_tag(pm.object.medicatable.drug_types)}"}
-
-                  = "#{pm.object.medicatable.name} - #{pm.object.dose}, #{pm.object.medication_route.name}, #{pm.object.frequency}, #{pm.object.date}"
-
-                  .right.edit
-                    Edit
-
-                .columns.large-6.meds-form.content{:id => "edit-meds-#{pm.object.id}", data: { index: 0 }}
-
-                  = render :partial => 'patients/medication_fields', :locals => { :pm => pm }
-
-                  .med-form.content{:id => "edit-meds-#{pm.object.id}"}
-                    = pm.check_box :_destroy
-                    = pm.label :_destroy, "Terminate?", class: "delete"
-
+        = render :partial => 'peritonitis_episodes/medication_forms', :locals => { :p => p }
