--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -16,11 +16,12 @@
 
     = render partial: 'shared/main_navigation'
 
-    - if flash[:notice]
-      .row.flash-notice
-        .alert-box.info.round{:data => {:alert => nil}}
-          = flash[:notice]
-          <a href="#" class="close">&times;</a>
+    - flash.each do |name, msg|
+      - if flash[name]
+        .row{class: "flash-#{name}"}
+          .alert-box.info.round{:data => {:alert => nil}}
+            = msg
+            <a href="#" class="close">&times;</a>
 
     .main-content
 
